<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dncdevelopment.thc4000.SmokerDataActivity"
    tools:showIn="@layout/activity_smoker_data">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_label_text"
        android:textStyle="bold"
        android:textSize="35sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smoker_label_text"
        android:textStyle="bold"
        android:textSize="35sp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_text"/>

    <!-- TODO: Add logo here
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Timer: "
        android:textStyle="bold"
        android:textSize="35dp"/>

    <!-- TODO: Add timer here -->



</LinearLayout>
